@@ -369,6 +369,13 @@ command to generate the output files.
     <alias type="application/powerpoint"/>
     <alias type="application/mspowerpoint"/>
   </mime-type>
+  <mime-type type="application/vnd.ms-xpsdocument">
+    <sub-class-of type="application/zip"/>
+    <_comment>XPS document</_comment>
+    <acronym>XPS</acronym>
+    <expanded-acronym>XML Paper Specification</expanded-acronym>
+    <glob pattern="*.xps"/>
+  </mime-type>
   <mime-type type="application/msword">
       <_comment>Word document</_comment>
     <magic priority="50">
